--- a/application/templates/admin/dashboard.html
+++ b/application/templates/admin/dashboard.html
@@ -36,7 +36,7 @@
                     <div class="col-md-4 my-1">
                         <div class="card text-center p-2 bg-danger text-white">
                             <h3>Products</h3>
-                            <h2>255</h2>
+                            <h2>{{products|length}}</h2>
                         </div>
                     </div>
                     <!-- CATEGORY CARD  -->
